--- a/style.css
+++ b/style.css
@@ -134,31 +134,19 @@ article button{
     align-self: flex-end;
 }
 .div7{
+padding: 50px;
    position: relative;
     display: flex;
     flex-direction: column;
-    
     border-radius: 8px;
-    width: 519px;
-    height: 437px;
-    background-color: rgb(198, 129, 201);
+    background-color: #FFFFFF;
+}
 
-}
-.div7 h2{
-
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
-}
-.div7 p{
-    display: flex;
-    justify-content: center;
-}
 .div7 h1{
     font-size: 70px;
     display: flex;
     justify-content: end;
-   padding: 50px;
+    margin-bottom: 50px;
 }
 .div7 img{
     background: linear-gradient(0deg, #F1F1F3, #F1F1F3),
